--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -14,12 +14,12 @@
 %                             ADDITIONAL PACKAGES
 %-------------------------------------------------------------------------------
 \documentclass[
-a4paper, 
+ a4paper, 11pt,
 %   showframes,
 %   maincolor=cvgreen,
 %   sectioncolor=red,
 %   subsectioncolor=orange
-%   sidebarwidth=0.4\paperwidth,
+  sidebarwidth=0.32\paperwidth,
 %   topbottommargin=0.03\paperheight,
 %   leftrightmargin=20pt
 ]{fortysecondscv}
@@ -61,7 +61,8 @@ a4paper,
   bubble fill opacity = 0.8,
 }
 
-
+\titlespacing{\section}{0pc}{2pt}{1pt}
+\titlespacing{\subsection}{0pc}{1pc}{0pc}
 %-------------------------------------------------------------------------------
 %                            PERSONAL INFORMATION
 %-------------------------------------------------------------------------------
@@ -134,17 +135,17 @@ a4paper,
   \cvitem{Mars - Juillet 2016}{Stage M2}{Institut d'Astrophysique de Paris}
   {Modélisation non sphérique des amas de galaxies par méthode de Metropolis Astings}
   \cvitem{Avril - Juillet 2015}{Stage M1}{Observatoire de Paris - LERMA}
-  {Étude de l'impact des Quasars radio Loud sur milieu intergalactique à l'époque de la
+  {Étude de l'impact des Quasars radio loud sur le milieu intergalactique à l'époque de la
   réionisation}
 \end{cvtable}
 
 
 \cvsection{Formations}
 \begin{cvtable}
-  \cvitem{2016-}{Doctorat}{Observatoire de Paris - Gepi}{}
-  \cvitem{2015-2016}{Master 2 Dynamique des systèmes gravitationnels}{Observatoire de Paris}{}
-  \cvitem{2014-2015}{Master 1 Sciences de L'univers et technologies spatiales}{Observatoire de Paris}{}
-  \cvitem{2011-2014}{Licence Physique fondamentale}{Université Lille 1}{}
+  \cvitem{2016-}{\textbf{Doctorat}}{Observatoire de Paris - Gepi}{}
+  \cvitem{2015-2016}{Master 2}{Observatoire de Paris}{Dynamique des systèmes gravitationnels}
+  \cvitem{2014-2015}{Master 1}{Observatoire de Paris}{Sciences de L'univers et technologies spatiales}
+  \cvitem{2011-2014}{Licence}{Université Lille 1}{Physique fondamentale}
 \end{cvtable}
 
 \cvsection{Communications}
@@ -152,7 +153,7 @@ a4paper,
 \begin{cvtable}
   \cvitem{Février 2019}
   {Gaia-2MASS 3D maps of Galactic interstellar dust\\within 3 kpc}
-  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{A\&A Sous Press}}
+  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{A\&A Sous Presse}}
   {Lallement \textit{et. al.}}
 
   \cvitem{Août 2018}
@@ -192,6 +193,13 @@ a4paper,
 \begin{cvtable}
   \cvitem{2018}{Conférence Pint of science}{Paris}{La mission spatiale Gaia ; avec Olivier La
   Marle}
+\end{cvtable}
+
+\cvsection{Responsabilités Administratives}
+\begin{cvtable}
+  \cvitemshort{2017-2019}{Représentant des étudiants de l'Observatoire de
+  Paris au Conseil d'Administration (CA), au conseil de l'Unité Formation-Enseignement (CUFE)
+et au conseil de la documentation (CDOC)}
 \end{cvtable}
 
 \end{document} 
