--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -130,10 +130,10 @@
 \cvsection{Expériences Professionnelles}
 \begin{cvtable}
   \cvitem{2016-}{Doctorat}{Observatoire de Paris - Gepi}{Étude de la structure de la Voie
-    Lactée
+    lactée
   avec les données Gaia, 2MASS, UKIDSS, VVV}
   \cvitem{Mars - Juillet 2016}{Stage M2}{Institut d'Astrophysique de Paris}
-  {Modélisation non sphérique des amas de galaxies par méthode de Metropolis Astings}
+  {Modélisation non sphérique des amas de galaxies par méthode de Metropolis Hastings}
   \cvitem{Avril - Juillet 2015}{Stage M1}{Observatoire de Paris - LERMA}
   {Étude de l'impact des Quasars radio loud sur le milieu intergalactique à l'époque de la
   réionisation}
@@ -198,7 +198,7 @@
 \cvsection{Responsabilités Administratives}
 \begin{cvtable}
   \cvitemshort{2017-2019}{Représentant des étudiants de l'Observatoire de
-  Paris au Conseil d'Administration (CA), au conseil de l'Unité Formation-Enseignement (CUFE)
+  Paris au Conseil d'administration (CA), au conseil de l'Unité Formation-Enseignement (CUFE)
 et au conseil de la documentation (CDOC)}
 \end{cvtable}
 
