--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -71,7 +71,7 @@
 % your name
 \cvname{Clément Hottier}
 % job title/career
-\cvjobtitle{Doctorant Astrophysique}
+\cvjobtitle{ATER}
 % date of birth
 \cvbirthday{22 Juin 1992}
 % phone number
@@ -129,14 +129,15 @@
 
 \cvsection{Expériences Professionnelles}
 \begin{cvtable}
-  \cvitem{2016-}{Doctorat}{Observatoire de Paris - Gepi}{Étude de la structure de la Voie
+  \cvitem{2019-2020}{ATER}{Observatoire de Paris - Gepi}{}
+  \cvitem{2016-2019}{Doctorat}{Observatoire de Paris - Gepi}{Étude de la structure de la Voie
     lactée
   avec les données Gaia, 2MASS, UKIDSS, VVV}
   \cvitem{Mars - Juillet 2016}{Stage M2}{Institut d'Astrophysique de Paris}
   {Modélisation non sphérique des amas de galaxies par méthode de Metropolis Hastings}
-  \cvitem{Avril - Juillet 2015}{Stage M1}{Observatoire de Paris - LERMA}
-  {Étude de l'impact des Quasars radio loud sur le milieu intergalactique à l'époque de la
-  réionisation}
+  % \cvitem{Avril - Juillet 2015}{Stage M1}{Observatoire de Paris - LERMA}
+  % {Étude de l'impact des Quasars radio loud sur le milieu intergalactique à l'époque de la
+  % réionisation}
 \end{cvtable}
 
 
@@ -145,7 +146,7 @@
   \cvitem{2016-}{\textbf{Doctorat}}{Observatoire de Paris - Gepi}{}
   \cvitem{2015-2016}{Master 2}{Observatoire de Paris}{Dynamique des systèmes gravitationnels}
   \cvitem{2014-2015}{Master 1}{Observatoire de Paris}{Sciences de L'univers et technologies spatiales}
-  \cvitem{2011-2014}{Licence}{Université Lille 1}{Physique fondamentale}
+  % \cvitem{2011-2014}{Licence}{Université Lille 1}{Physique fondamentale}
 \end{cvtable}
 
 \cvsection{Communications}
@@ -153,7 +154,7 @@
 \begin{cvtable}
   \cvitem{Février 2019}
   {Gaia-2MASS 3D maps of Galactic interstellar dust\\within 3 kpc}
-  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{A\&A Sous Presse}}
+  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{A\&A}}
   {Lallement \textit{et. al.}}
 
   \cvitem{Août 2018}
@@ -176,16 +177,16 @@
 \end{cvtable}
 
 \cvsection{Enseignement}
-\subsection{Monitorat}
+\subsection{Université}
 \begin{cvtable}
-  \cvitem{2016-2019}{Travaux dirigés}{M1 SUTS}{Mécanique Quantique -
+  \cvitem{2016-2019}{Travaux dirigés}{M1 Obs. Paris}{Mécanique Quantique -
   Programmation Fortran}
   
-  \cvitem{2016-2019}{Cours magistral}{M1 SUTS} {Programmation Fortran - Latex}
+  \cvitem{2016-2020}{Cours magistral}{M1 Obs. Paris} {Programmation Fortran - Latex}
 
-  \cvitem{2016-2018}{Tutorat à distance}{DU LU}{6 étudiants}
+  \cvitem{2016-2020}{Tutorat à distance}{DU Obs. Paris}{12 étudiants}
 
-  \cvitem{2016-2019}{Observations astronomiques}{DU ECU - FP}{Stage à l'Observatoire de Haute
+  \cvitem{2016-2020}{Observations astronomiques}{DU/FP Obs. Paris}{Stage à l'Observatoire de Haute
   Provence T152 - Soirée lunette Arago}
 \end{cvtable}
 
@@ -193,6 +194,7 @@
 \begin{cvtable}
   \cvitem{2018}{Conférence Pint of science}{Paris}{La mission spatiale Gaia ; avec Olivier La
   Marle}
+  \cvitem{2019}{Conférence étoile en scène}{Com Obs. Paris}{Conférence expresse au grand Rex}
 \end{cvtable}
 
 \cvsection{Responsabilités Administratives}
@@ -200,6 +202,9 @@
   \cvitemshort{2017-2019}{Représentant des étudiants de l'Observatoire de
   Paris au Conseil d'administration (CA), au conseil de l'Unité Formation-Enseignement (CUFE)
 et au conseil de la documentation (CDOC)}
+
+  \cvitemshort{2019}{Membre du comité de pilotage pour la réforme du Master 1 SUTS de
+l'Observatoire de Paris}
 \end{cvtable}
 
 \end{document} 
