--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -14,7 +14,7 @@
 %                             ADDITIONAL PACKAGES
 %-------------------------------------------------------------------------------
 \documentclass[
- a4paper, 11pt,
+ a4paper, 10.5pt,
 %   showframes,
 %   maincolor=cvgreen,
 %   sectioncolor=red,
@@ -143,23 +143,33 @@
 
 \cvsection{Formations}
 \begin{cvtable}
-  \cvitem{2016-}{\textbf{Doctorat}}{Observatoire de Paris - Gepi}{}
-  \cvitem{2015-2016}{Master 2}{Observatoire de Paris}{Dynamique des systèmes gravitationnels}
-  \cvitem{2014-2015}{Master 1}{Observatoire de Paris}{Sciences de L'univers et technologies spatiales}
+  \cvitem{2016-2019}{\textbf{Doctorat}}{Observatoire de Paris - Gepi}{}
+  \cvitem{2014-2016}{Master}{Observatoire de Paris}{Dynamique des systèmes gravitationnels}
+  % \cvitem{2014-2015}{Master 1}{Observatoire de Paris}{Sciences de L'univers et technologies spatiales}
   % \cvitem{2011-2014}{Licence}{Université Lille 1}{Physique fondamentale}
 \end{cvtable}
 
 \cvsection{Communications}
 \subsection{Publications}
 \begin{cvtable}
+  \cvitem{2020}
+  {FEDReD II : 3D Extinction Map with 2MASS and Gaia DR2 data}
+  {En Prép}
+  {Hottier \textit{et.al.}}
+
+  \cvitem{2020}
+  {FEDReD I: 3D dust and stellar maps by \\Bayesian deconvolution}
+  {En Prép}
+  {Babusiaux \textit{et.al.}}
+
   \cvitem{Février 2019}
   {Gaia-2MASS 3D maps of Galactic interstellar dust\\within 3 kpc}
-  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{A\&A}}
+  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{\underline{A\&A}}}
   {Lallement \textit{et. al.}}
 
   \cvitem{Août 2018}
   {Imprints of quasar duty cycle on the 21-cm signal from the Epoch of Reionization}
-  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{MNRAS}}
+  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{\underline{MNRAS}}}
   {Bolgar \textit{et. al.}}
 \end{cvtable}
 
@@ -167,12 +177,12 @@
 \begin{cvtable}
   \cvitem{Avril 2019}
   {Dust distribution in the Milky Way}
-  {$53^{rd}$ ESLAB}
+  {\href{https://ui.adsabs.harvard.edu/abs/2019gaia.confE..55H/abstract}{\underline{$53^{rd}$ ESLAB}}}
   {Hottier \textit{et. al.}}
 
   \cvitem{Juillet 2018}
   {Dust and star distribution in the Milky Way disk}
-  {\href{https://ui.adsabs.harvard.edu/\#abs/2018sf2a.conf..345H/abstract}{SF2A Proceeding}}
+  {\href{https://ui.adsabs.harvard.edu/\#abs/2018sf2a.conf..345H/abstract}{\underline{SF2A Proceeding}}}
   {Hottier \textit{et. al.}}
 \end{cvtable}
 
@@ -192,9 +202,12 @@
 
 \subsection{Médiation scientifique}
 \begin{cvtable}
-  \cvitem{2018}{Conférence Pint of science}{Paris}{La mission spatiale Gaia ; avec Olivier La
+  \cvitem{2018}
+  {Conférence Pint of science}
+  {\href{https://pintofscience.fr/}{\underline{Pint of science France}}}{La mission spatiale Gaia ; avec Olivier La
   Marle}
-  \cvitem{2019}{Conférence étoile en scène}{Com Obs. Paris}{Conférence expresse au grand Rex}
+  \cvitem{2019}{Conférence étoile en
+  scène}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{\underline{Com Obs. Paris}}}{Conférence expresse au grand Rex}
 \end{cvtable}
 
 \cvsection{Responsabilités Administratives}
