--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -129,10 +129,12 @@
 
 \cvsection{Expériences Professionnelles}
 \begin{cvtable}
-  \cvitem{2019-2020}{ATER}{Observatoire de Paris - Gepi}{}
-  \cvitem{2016-2019}{Doctorat}{Observatoire de Paris - Gepi}{Étude de la structure de la Voie
+  \cvitem{2019-2020}{ATER}{Observatoire de Paris - Gepi}{Étude de la structure de la Voie
     lactée
   avec les données Gaia, 2MASS, UKIDSS, VVV}
+  \cvitem{2016-2019}{Doctorat}{Observatoire de Paris - Gepi}{Étude de la structure de la Voie
+    lactée
+  avec les données Gaia, 2MASS}
   \cvitem{Mars - Juillet 2016}{Stage M2}{Institut d'Astrophysique de Paris}
   {Modélisation non sphérique des amas de galaxies par méthode de Metropolis Hastings}
   % \cvitem{Avril - Juillet 2015}{Stage M1}{Observatoire de Paris - LERMA}
@@ -207,7 +209,7 @@
   {\href{https://pintofscience.fr/}{\underline{Pint of science France}}}{La mission spatiale Gaia ; avec Olivier La
   Marle}
   \cvitem{2019}{Conférence étoile en
-  scène}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{\underline{Com Obs. Paris}}}{Conférence expresse au grand Rex}
+  scène}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{\underline{Com Obs. Paris}}}{Conférence express au Grand Rex}
 \end{cvtable}
 
 \cvsection{Responsabilités Administratives}
