--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -1,92 +1,221 @@
-\documentclass{moderncv}
-\moderncvtheme[purple]{classic}
-\usepackage[margin=1.5cm]{geometry}
-\usepackage[latin1]{inputenc}
-\usepackage{fontenc}
-\usepackage{comment}
+% FortySecondsCV LaTeX template
+% Copyright © 2019 René Wirnata <rene.wirnata@pandascience.net>
+% Licensed under the 3-Clause BSD License. See LICENSE file for details.
+%
+% Attributions
+% ------------
+% * fortysecondscv is based on the twentysecondcv class by Carmine Spagnuolo 
+%   (cspagnuolo@unisa.it), released under the MIT license and available under
+%   https://github.com/spagnuolocarmine/TwentySecondsCurriculumVitae-LaTex
+% * further attributions are indicated immediately before corresponding code
 
-\firstname{Cl\'ement}
-\familyname{Hottier}
-\address{Observatoire de Paris\\GEPI - Bat 11\\5 Place Jules Janssen}{92190 Meudon}
-\email{clement.hottier@obspm.fr}
-\phone{+33 1 45 07 79 07}
-\title{PhD $3^{rd}$ years}
-\photo[75pt]{./photo_cv.jpg}
-% \photo[75pt]{photo_identite_C_Hottier}
 
+%-------------------------------------------------------------------------------
+%                             ADDITIONAL PACKAGES
+%-------------------------------------------------------------------------------
+\documentclass[
+ a4paper, 10.5pt,
+%   showframes,
+%   maincolor=cvgreen,
+%   sectioncolor=red,
+%   subsectioncolor=orange
+  sidebarwidth=0.32\paperwidth,
+%   topbottommargin=0.03\paperheight,
+%   leftrightmargin=20pt
+]{fortysecondscv}
+
+% improve word spacing and hyphenation
+\usepackage{microtype}
+\usepackage{ragged2e}
+
+% take care of proper font encoding
+\ifxetex
+  \usepackage{fontspec}
+  \defaultfontfeatures{Ligatures=TeX}
+  % \newfontfamily\headingfont[Path = fonts/]{segoeuib.ttf} % local font
+\else
+  \usepackage[utf8]{inputenc}
+  \usepackage[T1]{fontenc}
+  % \usepackage[sfdefault]{noto} % use noto google font
+\fi
+
+% enable mathematical syntax for some symbols like \varnothing
+\usepackage{amssymb}
+
+% bubble diagram configuration
+\usepackage{smartdiagram}
+\smartdiagramset{
+  % defaut font size is \large, so adjust to harmonize with sidebar layout
+  bubble center node font = \footnotesize,
+  bubble node font = \footnotesize,
+  % default: 4cm/2.5cm; make minimum diameter relative to sidebar size
+  bubble center node size = 0.4\sidebartextwidth,
+  bubble node size = 0.25\sidebartextwidth,
+  distance center/other bubbles = 1.5em,
+  % set center bubble color
+  bubble center node color = maincolor!70,
+  % define the list of colors usable in the diagram
+  set color list = {maincolor!10, maincolor!40,
+  maincolor!20, maincolor!60, maincolor!35},
+  % sets the opacity at which the bubbles are shown
+  bubble fill opacity = 0.8,
+}
+
+\titlespacing{\section}{0pc}{2pt}{1pt}
+\titlespacing{\subsection}{0pc}{1pc}{0pc}
+%-------------------------------------------------------------------------------
+%                            PERSONAL INFORMATION
+%-------------------------------------------------------------------------------
+% profile picture
+\cvprofilepic{./photo_cv.jpg}
+% your name
+\cvname{Clément Hottier}
+% job title/career
+\cvjobtitle{Teaching Post Doc}
+% date of birth
+\cvbirthday{22 June 1992}
+% phone number
+\cvphone{+33 1 45 07 79 07}
+% personal website
+% \cvsite{https://pandascience.net}
+% email address
+\cvmail{clement.hottier@obspm.fr}
+% pgp key
+% add additional information
+% \newcommand{\additional}{some more?}
+
+
+%-------------------------------------------------------------------------------
+%                              SIDEBAR 1st PAGE
+%-------------------------------------------------------------------------------
+% overwrite default icons and order of personal information
+\renewcommand{\personaltable}{%
+  \begin{personal}
+    \circleicon{\faInfo}     & \cvbirthday \\
+    \circleicon{\faAt}       & \cvmail \\
+    % \circleicon{\faGlobe}    & \cvsite \\
+    \circleicon{\faPhone}    & \cvphone \\
+    % add another line
+  \end{personal}
+}
+
+% add more profile sections to sidebar on first page
+\addtofrontsidebar{
+  % include gosquare national flags from https://github.com/gosquared/flags;
+  % naming according to ISO 3166-1 alpha-2 country codes
+  \graphicspath{{pics/flags/}}
+
+  \profilesection{Languages}
+  \pointskill{\flag{FR.png}}{French}{5}
+  \pointskill{\flag{GB.png}}{English}{4}
+  \pointskill{\flag{ES.png}}{Spanish}{1}
+
+  \profilesection{Computing skills}
+  \barskill{}{Python/numpy/scipy/pandas}{85}
+  \barskill{}{Java}{80}
+  \barskill{}{Fortran/C}{60}
+  \barskill{}{bash}{70}
+  \barskill{}{Cluster use (slurm)}{85}
+
+}
+
+%-------------------------------------------------------------------------------
+%                         TABLE ENTRIES RIGHT COLUMN
+%-------------------------------------------------------------------------------
 \begin{document}
-\maketitle
 
-\section{Formation}
+\makefrontsidebar
 
-\cventry{2016-2019} {PhD Thesis} {Observatoire de Paris ED 127}{GEPI}
-{Supervised by C. Babusiaux}{Study of the Milky Way structure with GAIA survey}
+\cvsection{Professional experiences}
+\begin{cvtable}
+  \cvitem{2019-}{Teaching Post Doc}{Observatoire de Paris - GEPI}{Study of the Milky Way disk
+  with Gaia 2MASS, UKIDSS and VVV datas.}
+  \cvitem{2016-2019}{PhD Thesis}{Observatoire de Paris - GEPI}{Study of the Milky Way disk
+  with Gaia and 2MASS.}
+  \cvitem{March - July 2016}{Master degree intern.}{Institut d'Astrophysique de Paris}
+  {Modeling non-spherical galaxy clusters by the Metropolis-Hasting algorithme.}
+  % \cvitem{Avril - Juillet 2015}{Stage M1}{Observatoire de Paris - LERMA}
+  % {Étude de l'impact des Quasars radio loud sur le milieu intergalactique à l'époque de la
+  % réionisation}
+\end{cvtable}
 
-\cventry{2015-2016} {Master 2 Gravitotionnals Systems Dynamic}{Observatoire de Paris}{Paris}{}{Graduated with honors}
 
-\cventry{2014-2015}{Master 1 Universe's Science and Space Technologies}{Observatoire de Paris}{Paris}{}{Graduated with honors}
+\cvsection{Education}
+\begin{cvtable}
+  \cvitem{2016-2019}{\textbf{PhD Thesis}}{Observatoire de Paris - Gepi}{Milky Way disk
+  structure}
+  %mettre le titre de la thèse et la licence
+  \cvitem{2014-2016}{Masters degree}{Observatoire de Paris}{Astronomy and Astrophysics }
+  % \cvitem{2014-2015}{Master 1}{Observatoire de Paris}{Sciences de L'univers et technologies spatiales}
+  % \cvitem{2011-2014}{Licence}{Université Lille 1}{Physique fondamentale}
+\end{cvtable}
 
-\section{Publications}%
-\cventry{02/2019}
-{Gaia-2MASS 3D maps of Galactic interstellar dust within 3 kpc}
-{Lallement \textit{et. al.}}
-{Accepté A\&A}
-{\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{2019arXiv190204116L}}
-{}
+\cvsection{Communications}
+\subsection{Publications}
+\begin{cvtable}
+  \cvitem{2020}
+  {FEDReD II : 3D Extinction Map\\ with 2MASS and Gaia DR2 data}
+  {Submit : A\&A}
+  {Hottier \textit{et.al.}}
 
-\cventry{08/2018}
-{Imprints of quasar duty cycle on the 21-cm signal from the Epoch of Reionization}
-{Bolgar \textit{et. al.}}
-{MNRAS}
-{\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{2018MNRAS.478.5564B}}
-{}
+  \cvitem{2020}
+  {FEDReD I: 3D dust and stellar maps by \\Bayesian deconvolution}
+  {Submit : A\&A}
+  {Babusiaux \textit{et.al.}}
 
-\section{Talks}
-\cventry{Avril 2019}
-{$53^{rd}$ ESLAB symposium: the Gaia Universe}
-{Noordwijk}
-{Pays-Bas}
-{Dust distribution in the Milky Way}
-{}
+  \cvitem{February 2019}
+  {Gaia-2MASS 3D maps of Galactic interstellar dust\\within 3 kpc}
+  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{\underline{A\&A}}}
+  {Lallement \textit{et. al.}}
 
-\cventry{Juillet 2018}
-{Journée de la SF2A}
-{Bordeau}
-{France}
-{Dust and star distribution in the Milky Way disk}
-{\href{https://ui.adsabs.harvard.edu/\#abs/2018sf2a.conf..345H/abstract}{2018sf2a.conf..345H}}
+  \cvitem{August 2018}
+  {Imprints of quasar duty cycle on the 21-cm signal from the Epoch of Reionization}
+  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{\underline{MNRAS}}}
+  {Bolgar \textit{et. al.}}
+\end{cvtable}
 
-\section{Internships}
+\subsection{Talk}
+\begin{cvtable}
+  \cvitem{April 2019}
+  {Dust distribution in the Milky Way}
+  {\href{https://ui.adsabs.harvard.edu/abs/2019gaia.confE..55H/abstract}{\underline{$53^{rd}$ ESLAB}}}
+  {Hottier \textit{et. al.}}
 
-\cventry{March-July 2016}{IAP}{Paris}{}{Directed By Gary Mamon}
-{Non spherical galaxy cluster modelisation :\\
-Since observed position on the sky and line of sight velocity of tracers in the cluster, reconstruction of mass profile and velocity anisotropy profile, using likelihood maximisation (MCMC algorithm)}
+  \cvitem{July 2018}
+  {Dust and star distribution in the Milky Way disk}
+  {\href{https://ui.adsabs.harvard.edu/\#abs/2018sf2a.conf..345H/abstract}{\underline{SF2A Proceeding}}}
+  {Hottier \textit{et. al.}}
+\end{cvtable}
 
-\cventry{April-July 2015}
-{LERMA}
-{Observatoire de Paris}
-{Directed by Benoit Semelin}
-{}
-{Study of radio loud quasar imprint on the intergalactique medium}
+\cvsection{Teaching}
+\subsection{University}
+\begin{cvtable}
+  \cvitem{2016-2019}{Tutorials}{Masters degree Obs. Paris}{Quantum Mechanics  -
+  Programming}
   
+  \cvitem{2016-2020}{Lectures}{Masters degree Obs. Paris} {Programming}
 
-\section{Computer Tools}
-	\cvdoubleitem {Languages} 			{C}	{}	{ Fortran 90}
-	\cvdoubleitem {}					{Python}		{} 	{Java}
-	\cvdoubleitem {}					{Bash}	{}	{LaTex}
-	 
-  \cvdoubleitem {Parallele Programation} {OpenMP} {} {MPI}
+  \cvitem{2016-2020}{Observational project}{Obs. Paris}{At the Observatoire de Paris and at the
+    Observatoire de Haute Provence
+  }
+\end{cvtable}
 
+\subsection{Scientific Mediation}
+\begin{cvtable}
+  \cvitem{2018}
+  {Pint of Science Conference}
+  {\href{https://pintofscience.fr/}{\underline{Pint of science France}}}{The Gaia Mission}
+  \cvitem{2019}{Stars on
+  stage}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{\underline{Obs.
+Paris}}}{Express talk at Grand Rex movie theatre}
+\end{cvtable}
 
+\cvsection{Administrative Responsibility}
+\begin{cvtable}
+  \cvitemshort{2017-2019}{Student representative at Executive Board, Teaching Board and Library
+  Board of the Observatoire de Paris }
 
-\section{Languages}
-\cvitem{French}{Native speaking}
-\cvitem{English}{European B2 level}
-\cvitem{Spanish}{European A2 level}
+  \cvitemshort{2019}{Steering group member of the new Observatoire Paris Master degree.}
+\end{cvtable}
 
-\section{Miscellaneous}
-\cventry{2007}{First aid's diploma}{}{}{}{}
-\cventry{2011}{French driver's licence}{}{}{}{}
-
-
-                                                                  \end{document}
+\end{document} 
