--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -71,7 +71,7 @@
 % your name
 \cvname{Clément Hottier}
 % job title/career
-\cvjobtitle{Teaching Post Doc}
+\cvjobtitle{Post Doc}
 % date of birth
 \cvbirthday{22 June 1992}
 % phone number
@@ -111,6 +111,7 @@
   \pointskill{\flag{ES.png}}{Spanish}{1}
 
   \profilesection{Computing skills}
+  \barskill{}{ADQL/SQL}{75}
   \barskill{}{Python/numpy/scipy/pandas}{85}
   \barskill{}{Java}{80}
   \barskill{}{Fortran/C}{60}
@@ -126,26 +127,27 @@
 
 \makefrontsidebar
 
-\cvsection{Professional experiences}
+\cvsection{Research experiences}
 \begin{cvtable}
-  \cvitem{2019-}{Teaching Post Doc}{Observatoire de Paris - GEPI}{Study of the Milky Way disk
+  \cvitem{oct 2019- sep 2020}{Post Doc (with teaching duty)}{Observatoire de Paris - GEPI}{Study of the Milky Way disk
   with Gaia 2MASS, UKIDSS and VVV datas.}
   \cvitem{2016-2019}{PhD Thesis}{Observatoire de Paris - GEPI}{Study of the Milky Way disk
   with Gaia and 2MASS.}
-  \cvitem{March - July 2016}{Master degree intern.}{Institut d'Astrophysique de Paris}
-  {Modeling non-spherical galaxy clusters by the Metropolis-Hasting algorithme.}
-  % \cvitem{Avril - Juillet 2015}{Stage M1}{Observatoire de Paris - LERMA}
-  % {Étude de l'impact des Quasars radio loud sur le milieu intergalactique à l'époque de la
-  % réionisation}
+  \cvitem{Mar - Jul 2016}{Master's degree intern.}{Institut d'Astrophysique de Paris}
+  {Modeling non-spherical galaxy clusters by the Metropolis-Hasting algorithme. Supervised by
+  Mamon, G.}
+  \cvitem{Apr - Jul 2015}{Master's degree 1$^{th}$ year intern.}{Observatoire de Paris - LERMA}
+  {Study of the 21cm forest signal at the Epoch of Reionization.}
 \end{cvtable}
 
 
 \cvsection{Education}
 \begin{cvtable}
-  \cvitem{2016-2019}{\textbf{PhD Thesis}}{Observatoire de Paris - Gepi}{Milky Way disk
-  structure}
+  \cvitem{sep 2016 - oct 2019}{\textbf{PhD Thesis}}{Observatoire de Paris - Gepi}{"3D
+  distribution of star and dust in the Milky Way disk", supervised by Babusiaux, C. and Arenou,
+F. Defend the 17$^{th}$ septembre 2019}
   %mettre le titre de la thèse et la licence
-  \cvitem{2014-2016}{Masters degree}{Observatoire de Paris}{Astronomy and Astrophysics }
+  \cvitem{2014-2016}{Master's degree}{Observatoire de Paris}{"Astronomy and Astrophysics"}
   % \cvitem{2014-2015}{Master 1}{Observatoire de Paris}{Sciences de L'univers et technologies spatiales}
   % \cvitem{2011-2014}{Licence}{Université Lille 1}{Physique fondamentale}
 \end{cvtable}
@@ -163,12 +165,12 @@
   {Submit : A\&A}
   {Babusiaux \textit{et.al.}}
 
-  \cvitem{February 2019}
+  \cvitem{2019}
   {Gaia-2MASS 3D maps of Galactic interstellar dust\\within 3 kpc}
   {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{\underline{A\&A}}}
   {Lallement \textit{et. al.}}
 
-  \cvitem{August 2018}
+  \cvitem{2018}
   {Imprints of quasar duty cycle on the 21-cm signal from the Epoch of Reionization}
   {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{\underline{MNRAS}}}
   {Bolgar \textit{et. al.}}
@@ -176,12 +178,12 @@
 
 \subsection{Talk}
 \begin{cvtable}
-  \cvitem{April 2019}
+  \cvitem{Apr 2019}
   {Dust distribution in the Milky Way}
   {\href{https://ui.adsabs.harvard.edu/abs/2019gaia.confE..55H/abstract}{\underline{$53^{rd}$ ESLAB}}}
   {Hottier \textit{et. al.}}
 
-  \cvitem{July 2018}
+  \cvitem{Jul 2018}
   {Dust and star distribution in the Milky Way disk}
   {\href{https://ui.adsabs.harvard.edu/\#abs/2018sf2a.conf..345H/abstract}{\underline{SF2A Proceeding}}}
   {Hottier \textit{et. al.}}
@@ -204,7 +206,7 @@
 \begin{cvtable}
   \cvitem{2018}
   {Pint of Science Conference}
-  {\href{https://pintofscience.fr/}{\underline{Pint of science France}}}{The Gaia Mission}
+  {\href{https://pintofscience.fr/}{\underline{Pint of science France}}}{"The Gaia Mission"}
   \cvitem{2019}{Stars on
   stage}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{\underline{Obs.
 Paris}}}{Express talk at Grand Rex movie theatre}
