--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -157,12 +157,12 @@ F. Defend the 17$^{th}$ septembre 2019}
 \begin{cvtable}
   \cvitem{2020}
   {FEDReD II : 3D Extinction Map\\ with 2MASS and Gaia DR2 data}
-  {Submit : A\&A}
+  {Submitted : A\&A}
   {Hottier \textit{et.al.}}
 
   \cvitem{2020}
   {FEDReD I: 3D dust and stellar maps by \\Bayesian deconvolution}
-  {Submit : A\&A}
+  {Submitted : A\&A}
   {Babusiaux \textit{et.al.}}
 
   \cvitem{2019}
