--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -14,7 +14,7 @@
 %                             ADDITIONAL PACKAGES
 %-------------------------------------------------------------------------------
 \documentclass[
- a4paper, 10.5pt,
+ a4paper, 10.0pt,
 %   showframes,
 %   maincolor=cvgreen,
 %   sectioncolor=red,
@@ -71,7 +71,7 @@
 % your name
 \cvname{Clément Hottier}
 % job title/career
-\cvjobtitle{Post Doc}
+\cvjobtitle{Post Doc/Assistant Professor}
 % date of birth
 \cvbirthday{22 June 1992}
 % phone number
@@ -129,7 +129,7 @@
 
 \cvsection{Research experiences}
 \begin{cvtable}
-  \cvitem{oct 2019- sep 2020}{Post Doc (with teaching duty)}{Observatoire de Paris - GEPI}{Study of the Milky Way disk
+  \cvitem{oct 2019- sep 2020}{Post Doc/Assistant Professor}{Observatoire de Paris - GEPI}{Study of the Milky Way disk
   with Gaia 2MASS, UKIDSS and VVV datas.}
   \cvitem{2016-2019}{PhD Thesis}{Observatoire de Paris - GEPI}{Study of the Milky Way disk
   with Gaia and 2MASS.}
@@ -137,7 +137,7 @@
   {Modeling non-spherical galaxy clusters by the Metropolis-Hasting algorithme. Supervised by
   Mamon, G.}
   \cvitem{Apr - Jul 2015}{Master's degree 1$^{th}$ year intern.}{Observatoire de Paris - LERMA}
-  {Study of the 21cm forest signal at the Epoch of Reionization.}
+  {Study of the 21cm forest signal at the Epoch of Reionization and the imprint of quasars}
 \end{cvtable}
 
 
@@ -208,8 +208,12 @@ F. Defend the 17$^{th}$ septembre 2019}
   {Pint of Science Conference}
   {\href{https://pintofscience.fr/}{\underline{Pint of science France}}}{"The Gaia Mission"}
   \cvitem{2019}{Stars on
-  stage}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{\underline{Obs.
-Paris}}}{Express talk at Grand Rex movie theatre}
+  stage}{\href{https://youtu.be/zViGxRlhsqs}{\underline{Obs.
+Paris}}}{Express talk (Ted Talk like) at Grand Rex movie theatre}
+
+  \cvitem{2016-2020}{International Earth Science Olympiad}
+  {Science a l'école/Obs. Paris}
+  {Astronomy Coach and Mentor of the french national delegation}
 \end{cvtable}
 
 \cvsection{Administrative Responsibility}
