--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -19,7 +19,7 @@
 %   maincolor=cvgreen,
 %   sectioncolor=red,
 %   subsectioncolor=orange
-  sidebarwidth=0.32\paperwidth,
+  sidebarwidth=0.3\paperwidth,
 %   topbottommargin=0.03\paperheight,
 %   leftrightmargin=20pt
 ]{fortysecondscv}
@@ -69,7 +69,7 @@
 % profile picture
 \cvprofilepic{./photo_cv.jpg}
 % your name
-\cvname{Clément Hottier}
+\cvname{Clément\\Hottier}
 % job title/career
 \cvjobtitle{Post Doc/Assistant Professor}
 % date of birth
@@ -114,8 +114,8 @@
   \barskill{}{ADQL/SQL}{85}
   \barskill{}{Python/numpy/scipy/pandas}{95}
   \barskill{}{Java}{90}
-  \barskill{}{Fortran/C}{65}
-  \barskill{}{bash}{80}
+  \barskill{}{Fortran/C}{70}
+  \barskill{}{bash}{85}
   \barskill{}{Cluster use (slurm)}{95}
 
 }
@@ -129,12 +129,12 @@
 
 \cvsection{Research experiences}
 \begin{cvtable}
-  \cvitem{oct 2019- sep 2020}{Post Doc/Assistant Professor}{Observatoire de Paris - GEPI}{Study of the Milky Way disk
+  \cvitem{2019 - 2020}{Post Doc/Assistant Professor}{Observatoire de Paris - GEPI}{Study of the Milky Way disk
   with Gaia 2MASS, UKIDSS and VVV datas.}
   \cvitem{2016-2019}{PhD Thesis}{Observatoire de Paris - GEPI}{Study of the Milky Way disk
   with Gaia and 2MASS.}
   \cvitem{Mar - Jul 2016}{Master's degree intern.}{Institut d'Astrophysique de Paris}
-  {Modeling non-spherical galaxy clusters by the Metropolis-Hasting algorithme. Supervised by
+  {Modeling non-spherical galaxy clusters by the Metropolis-Hasting algorithm. Supervised by
   Mamon, G.}
   \cvitem{Apr - Jul 2015}{Master's degree 1$^{th}$ year intern.}{Observatoire de Paris - LERMA}
   {Study of the 21cm forest signal at the Epoch of Reionization and the imprint of quasars}
@@ -143,9 +143,9 @@
 
 \cvsection{Education}
 \begin{cvtable}
-  \cvitem{sep 2016 - oct 2019}{\textbf{PhD Thesis}}{Observatoire de Paris - Gepi}{"3D
+  \cvitem{2016 - 2019}{\textbf{PhD Thesis}}{Observatoire de Paris - Gepi}{"3D
   distribution of star and dust in the Milky Way disk", supervised by Babusiaux, C. and Arenou,
-F. Defend the 17$^{th}$ septembre 2019}
+F. Defended the 17$^{th}$ septembre 2019}
   %mettre le titre de la thèse et la licence
   \cvitem{2014-2016}{Master's degree}{Observatoire de Paris}{"Astronomy and Astrophysics"}
   % \cvitem{2014-2015}{Master 1}{Observatoire de Paris}{Sciences de L'univers et technologies spatiales}
@@ -156,13 +156,18 @@ F. Defend the 17$^{th}$ septembre 2019}
 \subsection{Publications}
 \begin{cvtable}
   \cvitem{2020}
-  {FEDReD II : 3D Extinction Map\\ with 2MASS and Gaia DR2 data}
-  {Submitted : A\&A}
+  {FEDReD III: Unraveling the 3D structure \\of Vela and Puppis}
+  {in prep}
+  {Hottier \textit{et.al.}}
+
+  \cvitem{2020}
+  {FEDReD II: 3D Extinction Map\\ with 2MASS and Gaia DR2 data}
+  {Submitted: A\&A}
   {Hottier \textit{et.al.}}
 
   \cvitem{2020}
   {FEDReD I: 3D dust and stellar maps by \\Bayesian deconvolution}
-  {Submitted : A\&A}
+  {Submitted: A\&A}
   {Babusiaux \textit{et.al.}}
 
   \cvitem{2019}
@@ -192,7 +197,7 @@ F. Defend the 17$^{th}$ septembre 2019}
 \cvsection{Teaching}
 \subsection{University}
 \begin{cvtable}
-  \cvitem{2016-2019}{Tutorials}{Masters degree Obs. Paris}{Quantum Mechanics  -
+  \cvitem{2016-2020}{Tutorials}{Masters degree Obs. Paris}{Quantum Mechanics  -
   Programming}
   
   \cvitem{2016-2020}{Lectures}{Masters degree Obs. Paris} {Programming}
@@ -202,26 +207,26 @@ F. Defend the 17$^{th}$ septembre 2019}
   }
 \end{cvtable}
 
-\subsection{Scientific Mediation}
+\subsection{Scientific Outreach}
 \begin{cvtable}
   \cvitem{2018}
   {Pint of Science Conference}
   {\href{https://pintofscience.fr/}{\underline{Pint of science France}}}{"The Gaia Mission"}
   \cvitem{2019}{Stars on
   stage}{\href{https://youtu.be/zViGxRlhsqs}{\underline{Obs.
-Paris}}}{Express talk (Ted Talk like) at Grand Rex movie theatre}
+Paris}}}{Express talk (Ted-like Talk) at Grand Rex movie theatre}
 
   \cvitem{2016-2020}{International Earth Science Olympiad}
   {Science a l'école/Obs. Paris}
   {Astronomy Coach and Mentor of the french national delegation}
 \end{cvtable}
 
-\cvsection{Administrative Responsibility}
+\cvsection{Administrative Responsibilities}
 \begin{cvtable}
+  \cvitemshort{2019-2020}{Steering group member of the new Observatoire Paris Master degree.}
   \cvitemshort{2017-2019}{Student representative at Executive Board, Teaching Board and Library
   Board of the Observatoire de Paris }
 
-  \cvitemshort{2019}{Steering group member of the new Observatoire Paris Master degree.}
 \end{cvtable}
 
 \end{document} 
