fixing link color

--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -24,6 +24,12 @@
 %   leftrightmargin=20pt
 ]{fortysecondscv}
 
+\definecolor{linkcol}{HTML}{0066CC}
+\hypersetup{colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=linkcol,
+  }
 % improve word spacing and hyphenation
 \usepackage{microtype}
 \usepackage{ragged2e}
@@ -172,12 +178,12 @@ F. Defended the 17$^{th}$ septembre 2019}
 
   \cvitem{2019}
   {Gaia-2MASS 3D maps of Galactic interstellar dust\\within 3 kpc}
-  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{\underline{A\&A}}}
+  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{A\&A}}
   {Lallement \textit{et. al.}}
 
   \cvitem{2018}
   {Imprints of quasar duty cycle on the 21-cm signal from the Epoch of Reionization}
-  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{\underline{MNRAS}}}
+  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{MNRAS}}
   {Bolgar \textit{et. al.}}
 \end{cvtable}
 
@@ -185,12 +191,12 @@ F. Defended the 17$^{th}$ septembre 2019}
 \begin{cvtable}
   \cvitem{Apr 2019}
   {Dust distribution in the Milky Way}
-  {\href{https://ui.adsabs.harvard.edu/abs/2019gaia.confE..55H/abstract}{\underline{$53^{rd}$ ESLAB}}}
+  {\href{https://ui.adsabs.harvard.edu/abs/2019gaia.confE..55H/abstract}{$53^{rd}$ ESLAB}}
   {Hottier \textit{et. al.}}
 
   \cvitem{Jul 2018}
   {Dust and star distribution in the Milky Way disk}
-  {\href{https://ui.adsabs.harvard.edu/\#abs/2018sf2a.conf..345H/abstract}{\underline{SF2A Proceeding}}}
+  {\href{https://ui.adsabs.harvard.edu/\#abs/2018sf2a.conf..345H/abstract}{SF2A Proceeding}}
   {Hottier \textit{et. al.}}
 \end{cvtable}
 
@@ -211,10 +217,10 @@ F. Defended the 17$^{th}$ septembre 2019}
 \begin{cvtable}
   \cvitem{2018}
   {Pint of Science Conference}
-  {\href{https://pintofscience.fr/}{\underline{Pint of science France}}}{"The Gaia Mission"}
+  {\href{https://pintofscience.fr/}{Pint of science France}}{"The Gaia Mission"}
   \cvitem{2019}{Stars on
-  stage}{\href{https://youtu.be/zViGxRlhsqs}{\underline{Obs.
-Paris}}}{Express talk (Ted-like Talk) at Grand Rex movie theatre}
+  stage}{\href{https://youtu.be/zViGxRlhsqs}{Obs.
+Paris}}{Express talk (Ted-like Talk) at Grand Rex movie theatre}
 
   \cvitem{2016-2020}{International Earth Science Olympiad}
   {Science a l'école/Obs. Paris}
