fixing the 2 page issu

--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -14,13 +14,13 @@
 %                             ADDITIONAL PACKAGES
 %-------------------------------------------------------------------------------
 \documentclass[
- a4paper, 10.0pt,
+ a4paper, 9.5pt,
 %   showframes,
 %   maincolor=cvgreen,
 %   sectioncolor=red,
 %   subsectioncolor=orange
   sidebarwidth=0.3\paperwidth,
-%   topbottommargin=0.03\paperheight,
+  % topbottommargin=0.03\paperheight,
 %   leftrightmargin=20pt
 ]{fortysecondscv}
 
@@ -68,7 +68,7 @@
 }
 
 \titlespacing{\section}{0pc}{2pt}{1pt}
-\titlespacing{\subsection}{0pc}{1pc}{0pc}
+\titlespacing{\subsection}{0pc}{1pt}{0pc}
 %-------------------------------------------------------------------------------
 %                            PERSONAL INFORMATION
 %-------------------------------------------------------------------------------
@@ -149,9 +149,8 @@
 
 \cvsection{Education}
 \begin{cvtable}
-  \cvitem{2016 - 2019}{\textbf{PhD Thesis}}{Observatoire de Paris - Gepi}{"3D
-  distribution of star and dust in the Milky Way disk", supervised by Babusiaux, C. and Arenou,
-F. Defended the 17$^{th}$ septembre 2019}
+  \cvitem{2016 - 2019}{\textbf{PhD Thesis}}{Observatoire de Paris - Gepi}{3D
+  distribution of star and dust in the Milky Way disk}
   %mettre le titre de la thèse et la licence
   \cvitem{2014-2016}{Master's degree}{Observatoire de Paris}{"Astronomy and Astrophysics"}
   % \cvitem{2014-2015}{Master 1}{Observatoire de Paris}{Sciences de L'univers et technologies spatiales}
