--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -223,7 +223,7 @@ Paris}}{Express talk (Ted-like Talk) at Grand Rex movie theatre}
 
   \cvitem{2016-2020}{International Earth Science Olympiad}
   {Science a l'école/Obs. Paris}
-  {Astronomy Coach and Mentor of the french national delegation}
+  {Astronomy Coach and Mentor of the French national delegation}
 \end{cvtable}
 
 \cvsection{Administrative Responsibilities}
