--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -150,7 +150,8 @@
 \cvsection{Education}
 \begin{cvtable}
   \cvitem{2016 - 2019}{\textbf{PhD Thesis}}{Observatoire de Paris - Gepi}{3D
-  distribution of star and dust in the Milky Way disk}
+  distribution of star and dust in the Milky Way disk
+(\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{online manuscript})}
   %mettre le titre de la thèse et la licence
   \cvitem{2014-2016}{Master's degree}{Observatoire de Paris}{"Astronomy and Astrophysics"}
   % \cvitem{2014-2015}{Master 1}{Observatoire de Paris}{Sciences de L'univers et technologies spatiales}
@@ -167,7 +168,7 @@
 
   \cvitem{2020}
   {FEDReD II: 3D Extinction Map\\ with 2MASS and Gaia DR2 data}
-  {Submitted: A\&A}
+  {Accepted: A\&A}
   {Hottier \textit{et.al.}}
 
   \cvitem{2020}
@@ -228,7 +229,7 @@ Paris}}{Express talk (Ted-like Talk) at Grand Rex movie theatre}
 
 \cvsection{Administrative Responsibilities}
 \begin{cvtable}
-  \cvitemshort{2019-2020}{Steering group member of the new Observatoire Paris Master degree.}
+  \cvitemshort{2019-2020}{Steering group member of the new Observatoire de Paris Master degree.}
   \cvitemshort{2017-2019}{Student representative at Executive Board, Teaching Board and Library
   Board of the Observatoire de Paris }
 
