--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -168,12 +168,12 @@
 
   \cvitem{2020}
   {FEDReD II: 3D Extinction Map\\ with 2MASS and Gaia DR2 data}
-  {Accepted: A\&A}
+  {\href{https://ui.adsabs.harvard.edu/abs/2020arXiv200703734H/abstract}{Accepted: A\&A}}
   {Hottier \textit{et.al.}}
 
   \cvitem{2020}
   {FEDReD I: 3D dust and stellar maps by \\Bayesian deconvolution}
-  {Submitted: A\&A}
+  {\href{https://ui.adsabs.harvard.edu/abs/2020arXiv200704455B/abstract}{Accepted A\&A}}
   {Babusiaux \textit{et.al.}}
 
   \cvitem{2019}
