--- a/CV_Clement_Hottier_prive.tex
+++ b/CV_Clement_Hottier_prive.tex
@@ -169,7 +169,7 @@
   \cvitem{2016-2020}{Cours Magistraux et Travaux dirigés}{Observatoire de Paris}{
   Programmation Scientifique - Programmation Latex - Mécanique Quantique}
   
-  \cvitem{2016-2020}{Stage d'observation OHP}{Observatoire de Paris/Univ Paris-Saclay}
+  \cvitem{2016-2020}{Stage d'observation}{Observatoire de Paris/Univ Paris-Saclay}
   {- Encadrement d'observation sur instruments professionnels\\
    - Développement de la boite à outil de réduction des données et distribution en package
  python et conteneur Docker}
