--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -151,7 +151,7 @@
 \begin{cvtable}
   \cvitem{2016 - 2019}{\textbf{PhD Thesis}}{Observatoire de Paris - Gepi}{3D
   distribution of star and dust in the Milky Way disk
-(\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{online manuscript})}
+(\href{https://tel.archives-ouvertes.fr/tel-02879238/document}{online manuscript})}
   %mettre le titre de la thèse et la licence
   \cvitem{2014-2016}{Master's degree}{Observatoire de Paris}{"Astronomy and Astrophysics"}
   % \cvitem{2014-2015}{Master 1}{Observatoire de Paris}{Sciences de L'univers et technologies spatiales}
