--- a/CV_Clement_Hottier_prive.tex
+++ b/CV_Clement_Hottier_prive.tex
@@ -86,7 +86,8 @@
 % personal website
 % \cvsite{https://pandascience.net}
 % email address
-\cvmail{clement.hottier@obspm.fr}
+% \cvmail{clement.hottier@obspm.fr}
+\cvmail{hottierclement@gmail.com}
 % pgp key
 % add additional information
 % \newcommand{\additional}{some more?}
@@ -122,9 +123,9 @@
   \barskill{}{Python : numpy/scipy/pandas}{95}
   \barskill{}{Java}{90}
   \barskill{}{Fortran/C}{70}
-  \barskill{}{bash}{85}
+  \barskill{}{Bash}{85}
   \barskill{}{Cluster computing (slurm)}{95}
-  \barskill{}{git}{75}
+  \barskill{}{Git}{75}
   \barskill{}{Docker}{60}
 
 }
@@ -170,8 +171,8 @@
   Programmation Scientifique - Programmation Latex - Mécanique Quantique}
   
   \cvitem{2016-2020}{Stage d'observation}{Observatoire de Paris/Univ Paris-Saclay}
-  {- Encadrement d'observation sur instruments professionnels\\
-   - Développement de la boite à outil de réduction des données et distribution en package
+  {- Encadrement d'observations sur instruments professionnels\\
+   - Développement de la boîte à outils de réduction des données et distribution en package
  python et conteneur Docker}
 \end{cvtable}
 
@@ -180,7 +181,7 @@
   \cvitem{2018}
   {Conférence Pint of science}
   {\href{https://pintofscience.fr/}{\underline{Pint of science France}}}{La mission spatiale Gaia}
-  \cvitem{2019}{Conférence étoile en
+  \cvitem{2019}{Conférence étoiles en
   scène}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{\underline{Com Obs. Paris}}}{Conférence express au Grand Rex}
 \end{cvtable}
 
@@ -200,7 +201,7 @@
   {}
 \end{cvtable}
 
-\subsection{Conférences International}
+\subsection{Conférences Internationales}
 \begin{cvtable}
   \cvitem{Avril 2019}
   {Dust distribution in the Milky Way}
@@ -217,7 +218,7 @@
 \cvsection{Responsabilités Administratives}
 \begin{cvtable}
   \cvitemshort{2017-2019}{Représentant des étudiants de l'Observatoire de
-  Paris au Conseil d'administration (CA), au conseil de l'Unité Formation-Enseignement (CUFE)
+  Paris au conseil d'administration (CA), au conseil de l'Unité Formation-Enseignement (CUFE)
 et au conseil de la documentation (CDOC)}
 
   \cvitemshort{2019}{Membre du comité de pilotage pour la réforme du Master 1 SUTS de
