--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -121,8 +121,9 @@
   \barskill{}{Python/numpy/scipy/pandas}{95}
   \barskill{}{Java}{90}
   \barskill{}{Fortran/C}{70}
-  \barskill{}{bash}{85}
+  \barskill{}{Bash}{85}
   \barskill{}{Cluster use (slurm)}{95}
+  \barskill{}{Docker}{65}
 
 }
 
@@ -135,15 +136,17 @@
 
 \cvsection{Research experiences}
 \begin{cvtable}
+  \cvitem{2020-2022}{Post Doc}{Observatoire de Paris - GEPI}{High resolution kinetic tomography
+  of the ISM}
   \cvitem{2019 - 2020}{Post Doc/Assistant Professor}{Observatoire de Paris - GEPI}{Study of the Milky Way disk
   with Gaia 2MASS, UKIDSS and VVV datas.}
   \cvitem{2016-2019}{PhD Thesis}{Observatoire de Paris - GEPI}{Study of the Milky Way disk
   with Gaia and 2MASS.}
-  \cvitem{Mar - Jul 2016}{Master's degree intern.}{Institut d'Astrophysique de Paris}
-  {Modeling non-spherical galaxy clusters by the Metropolis-Hasting algorithm. Supervised by
-  Mamon, G.}
-  \cvitem{Apr - Jul 2015}{Master's degree 1$^{th}$ year intern.}{Observatoire de Paris - LERMA}
-  {Study of the 21cm forest signal at the Epoch of Reionization and the imprint of quasars}
+  % \cvitem{Mar - Jul 2016}{Master's degree intern.}{Institut d'Astrophysique de Paris}
+  % {Modeling non-spherical galaxy clusters by the Metropolis-Hasting algorithm. Supervised by
+  % Mamon, G.}
+  % \cvitem{Apr - Jul 2015}{Master's degree 1$^{th}$ year intern.}{Observatoire de Paris - LERMA}
+  % {Study of the 21cm forest signal at the Epoch of Reionization and the imprint of quasars}
 \end{cvtable}
 
 
@@ -215,12 +218,16 @@
 
 \subsection{Scientific Outreach}
 \begin{cvtable}
-  \cvitem{2018}
-  {Pint of Science Conference}
-  {\href{https://pintofscience.fr/}{Pint of science France}}{"The Gaia Mission"}
+  \cvitem{2020}{Gaia, the largest star survey}{\href{https://youtu.be/r70a8Ztte4w}{Obs. Paris}}
+  {French week of sciences}
+
   \cvitem{2019}{Stars on
   stage}{\href{https://youtu.be/zViGxRlhsqs}{Obs.
 Paris}}{Express talk (Ted-like Talk) at Grand Rex movie theatre}
+
+  \cvitem{2018}
+  {Pint of Science Conference}
+  {\href{https://pintofscience.fr/}{Pint of science France}}{"The Gaia Mission"}
 
   \cvitem{2016-2020}{International Earth Science Olympiad}
   {Science a l'école/Obs. Paris}
