--- a/CV_Clement_Hottier_En.tex
+++ b/CV_Clement_Hottier_En.tex
@@ -164,19 +164,19 @@
 \cvsection{Communications}
 \subsection{Publications}
 \begin{cvtable}
-  \cvitem{2020}
+  \cvitem{2021}
   {FEDReD III: Unraveling the 3D structure \\of Vela and Puppis}
   {in prep}
   {Hottier \textit{et.al.}}
 
   \cvitem{2020}
   {FEDReD II: 3D Extinction Map\\ with 2MASS and Gaia DR2 data}
-  {\href{https://ui.adsabs.harvard.edu/abs/2020arXiv200703734H/abstract}{In Press: A\&A}}
+  {\href{https://ui.adsabs.harvard.edu/abs/2020arXiv200703734H/abstract}{A\&A}}
   {Hottier \textit{et.al.}}
 
   \cvitem{2020}
   {FEDReD I: 3D dust and stellar maps by \\Bayesian deconvolution}
-  {\href{https://ui.adsabs.harvard.edu/abs/2020arXiv200704455B/abstract}{In Press A\&A}}
+  {\href{https://ui.adsabs.harvard.edu/abs/2020arXiv200704455B/abstract}{A\&A}}
   {Babusiaux \textit{et.al.}}
 
   \cvitem{2019}
