--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -14,16 +14,22 @@
 %                             ADDITIONAL PACKAGES
 %-------------------------------------------------------------------------------
 \documentclass[
- a4paper, 10.5pt,
+ a4paper, 9.5pt,
 %   showframes,
 %   maincolor=cvgreen,
 %   sectioncolor=red,
 %   subsectioncolor=orange
-  sidebarwidth=0.32\paperwidth,
+  sidebarwidth=0.28\paperwidth,
 %   topbottommargin=0.03\paperheight,
 %   leftrightmargin=20pt
 ]{fortysecondscv}
 
+\definecolor{linkcol}{HTML}{0066CC}
+\hypersetup{colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=linkcol,
+  }
 % improve word spacing and hyphenation
 \usepackage{microtype}
 \usepackage{ragged2e}
@@ -69,7 +75,7 @@
 % profile picture
 \cvprofilepic{./photo_cv.jpg}
 % your name
-\cvname{Clément Hottier}
+\cvname{Clément\\Hottier}
 % job title/career
 \cvjobtitle{ATER}
 % date of birth
@@ -111,12 +117,13 @@
   \pointskill{\flag{ES.png}}{Espagnol}{1}
 
   \profilesection{Programmation}
-  \barskill{}{Python}{85}
-  \barskill{}{Java}{80}
-  \barskill{}{C}{60}
-  \barskill{}{Fortran}{60}
-  \barskill{}{bash}{70}
-  \barskill{}{slurm}{85}
+  \barskill{}{ADQL/SQL}{85}
+  \barskill{}{Python/numpy/scipy/pandas}{95}
+  \barskill{}{Java}{90}
+  \barskill{}{Fortran/C}{70}
+  \barskill{}{Bash}{85}
+  \barskill{}{Cluster use (slurm)}{95}
+  \barskill{}{Docker}{65}
 
 }
 
@@ -127,16 +134,18 @@
 
 \makefrontsidebar
 
-\cvsection{Expériences Professionnelles}
+\cvsection{Expériences de recherche}
 \begin{cvtable}
-  \cvitem{2019-2020}{ATER}{Observatoire de Paris - Gepi}{Étude de la structure de la Voie
+  \cvitem{2021-2023}{Post Doc}{Observatoire de Paris - GEPI}{Tomographie cinétique du milieu
+  interstellaire}
+  \cvitem{2019-2020}{ATER}{Observatoire de Paris - GEPI- UFE}{Étude de la structure de la Voie
     lactée
   avec les données Gaia, 2MASS, UKIDSS, VVV}
   \cvitem{2016-2019}{Doctorat}{Observatoire de Paris - Gepi}{Étude de la structure de la Voie
     lactée
   avec les données Gaia, 2MASS}
-  \cvitem{Mars - Juillet 2016}{Stage M2}{Institut d'Astrophysique de Paris}
-  {Modélisation non sphérique des amas de galaxies par méthode de Metropolis Hastings}
+  % \cvitem{Mars - Juillet 2016}{Stage M2}{Institut d'Astrophysique de Paris}
+  % {Modélisation non sphérique des amas de galaxies par méthode de Metropolis Hastings}
   % \cvitem{Avril - Juillet 2015}{Stage M1}{Observatoire de Paris - LERMA}
   % {Étude de l'impact des Quasars radio loud sur le milieu intergalactique à l'époque de la
   % réionisation}
@@ -154,38 +163,48 @@
 \cvsection{Communications}
 \subsection{Publications}
 \begin{cvtable}
+  \cvitem{2021}
+  {FEDReD III: Unraveling the 3D structure \\of Vela and Puppis}
+  {in prep}
+  {Hottier \textit{et.al.}}
+
   \cvitem{2020}
-  {FEDReD II : 3D Extinction Map with 2MASS and Gaia DR2 data}
-  {En Prép}
+  {FEDReD II: 3D Extinction Map\\ with 2MASS and Gaia DR2 data}
+  {\href{https://ui.adsabs.harvard.edu/abs/2020arXiv200703734H/abstract}{A\&A}}
   {Hottier \textit{et.al.}}
 
   \cvitem{2020}
   {FEDReD I: 3D dust and stellar maps by \\Bayesian deconvolution}
-  {En Prép}
+  {\href{https://ui.adsabs.harvard.edu/abs/2020arXiv200704455B/abstract}{A\&A}}
   {Babusiaux \textit{et.al.}}
 
-  \cvitem{Février 2019}
+  \cvitem{2019}
   {Gaia-2MASS 3D maps of Galactic interstellar dust\\within 3 kpc}
-  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{\underline{A\&A}}}
+  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{A\&A}}
   {Lallement \textit{et. al.}}
 
-  \cvitem{Août 2018}
+  \cvitem{2018}
   {Imprints of quasar duty cycle on the 21-cm signal from the Epoch of Reionization}
-  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{\underline{MNRAS}}}
+  {\href{https://ui.adsabs.harvard.edu/\#abs/2019arXiv190204116L/abstract}{MNRAS}}
   {Bolgar \textit{et. al.}}
 \end{cvtable}
 
+
 \subsection{Conférences}
 \begin{cvtable}
-  \cvitem{Avril 2019}
+  \cvitem{2019}
   {Dust distribution in the Milky Way}
-  {\href{https://ui.adsabs.harvard.edu/abs/2019gaia.confE..55H/abstract}{\underline{$53^{rd}$ ESLAB}}}
-  {Hottier \textit{et. al.}}
+  {\href{https://ui.adsabs.harvard.edu/abs/2019gaia.confE..55H/abstract}{$53^{rd}$ ESLAB}}
+  {} % {Hottier \textit{et. al.}}
 
-  \cvitem{Juillet 2018}
+  \cvitem{2018}
   {Dust and star distribution in the Milky Way disk}
-  {\href{https://ui.adsabs.harvard.edu/\#abs/2018sf2a.conf..345H/abstract}{\underline{SF2A Proceeding}}}
-  {Hottier \textit{et. al.}}
+  {\href{https://ui.adsabs.harvard.edu/\#abs/2018sf2a.conf..345H/abstract}{SF2A Proceeding}}
+  {}% {Hottier \textit{et. al.}}
+
+  \cvitem{2020}{Unravelling the Vela
+  clouds}{\href{https://sftools-bigdata.sciencesconf.org/336375}{SFtools-bigdata}}
+  {}% {Hottier \textit{et. al.}}
 \end{cvtable}
 
 \cvsection{Enseignement}
@@ -204,22 +223,26 @@
 
 \subsection{Médiation scientifique}
 \begin{cvtable}
+  \cvitem{2020}{Fête de la science à
+  l'Observatoire}{\href{https://youtu.be/r70a8Ztte4w}{Youtube Live}}{Gaia : Le plus vaste
+catalogue d'étoiles}
+  \cvitem{2019}{Conférence étoile en
+  scène}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{Com Obs. Paris}}{Conférence express au Grand Rex}
   \cvitem{2018}
   {Conférence Pint of science}
-  {\href{https://pintofscience.fr/}{\underline{Pint of science France}}}{La mission spatiale Gaia ; avec Olivier La
+  {\href{https://pintofscience.fr/}{Pint of science France}}{La mission spatiale Gaia ; avec Olivier La
   Marle}
-  \cvitem{2019}{Conférence étoile en
-  scène}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{\underline{Com Obs. Paris}}}{Conférence express au Grand Rex}
 \end{cvtable}
 
 \cvsection{Responsabilités Administratives}
 \begin{cvtable}
-  \cvitemshort{2017-2019}{Représentant des étudiants de l'Observatoire de
-  Paris au Conseil d'administration (CA), au conseil de l'Unité Formation-Enseignement (CUFE)
-et au conseil de la documentation (CDOC)}
 
   \cvitemshort{2019}{Membre du comité de pilotage pour la réforme du Master 1 SUTS de
 l'Observatoire de Paris}
+
+  \cvitemshort{2017-2019}{Représentant des étudiants de l'Observatoire de
+  Paris au Conseil d'administration (CA), au conseil de l'Unité Formation-Enseignement (CUFE)
+et au conseil de la documentation (CDOC)}
 \end{cvtable}
 
 \end{document} 
