--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -122,7 +122,7 @@
   \barskill{}{Java}{90}
   \barskill{}{Fortran/C}{70}
   \barskill{}{Bash}{85}
-  \barskill{}{Cluster use (slurm)}{95}
+  \barskill{}{Cluster de calculs (slurm)}{95}
   \barskill{}{Docker}{65}
 
 }
@@ -136,7 +136,7 @@
 
 \cvsection{Expériences de recherche}
 \begin{cvtable}
-  \cvitem{2021-2023}{Post Doc}{Observatoire de Paris - GEPI}{Tomographie cinétique du milieu
+  \cvitem{2021-2023}{Post Doctorant}{Observatoire de Paris - GEPI}{Tomographie cinétique du milieu
   interstellaire}
   \cvitem{2019-2020}{ATER}{Observatoire de Paris - GEPI- UFE}{Étude de la structure de la Voie
     lactée
@@ -154,7 +154,7 @@
 
 \cvsection{Formations}
 \begin{cvtable}
-  \cvitem{2016-2019}{\textbf{Doctorat}}{Observatoire de Paris - Gepi}{}
+  \cvitem{2016-2019}{\textbf{Doctorat}}{Observatoire de Paris - GEPI}{}
   \cvitem{2014-2016}{Master}{Observatoire de Paris}{Dynamique des systèmes gravitationnels}
   % \cvitem{2014-2015}{Master 1}{Observatoire de Paris}{Sciences de L'univers et technologies spatiales}
   % \cvitem{2011-2014}{Licence}{Université Lille 1}{Physique fondamentale}
@@ -226,7 +226,7 @@
   \cvitem{2020}{Fête de la science à
   l'Observatoire}{\href{https://youtu.be/r70a8Ztte4w}{Youtube Live}}{Gaia : Le plus vaste
 catalogue d'étoiles}
-  \cvitem{2019}{Conférence étoile en
+  \cvitem{2019}{Conférence étoiles en
   scène}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{Com Obs. Paris}}{Conférence express au Grand Rex}
   \cvitem{2018}
   {Conférence Pint of science}
