update cv français

--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -165,7 +165,7 @@
 \begin{cvtable}
   \cvitem{2021}
   {FEDReD III: Unraveling the 3D structure \\of Vela and Puppis}
-  {in prep}
+  {Soumis}
   {Hottier \textit{et.al.}}
 
   \cvitem{2020}
@@ -192,6 +192,10 @@
 
 \subsection{Conférences}
 \begin{cvtable}
+  \cvitem{2020}{Unravelling the Vela
+  clouds}{\href{https://sftools-bigdata.sciencesconf.org/336375}{SFtools-bigdata}}
+  {}% {Hottier \textit{et. al.}}
+
   \cvitem{2019}
   {Dust distribution in the Milky Way}
   {\href{https://ui.adsabs.harvard.edu/abs/2019gaia.confE..55H/abstract}{$53^{rd}$ ESLAB}}
@@ -202,9 +206,6 @@
   {\href{https://ui.adsabs.harvard.edu/\#abs/2018sf2a.conf..345H/abstract}{SF2A Proceeding}}
   {}% {Hottier \textit{et. al.}}
 
-  \cvitem{2020}{Unravelling the Vela
-  clouds}{\href{https://sftools-bigdata.sciencesconf.org/336375}{SFtools-bigdata}}
-  {}% {Hottier \textit{et. al.}}
 \end{cvtable}
 
 \cvsection{Enseignement}
