--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -77,7 +77,7 @@
 % your name
 \cvname{Clément\\Hottier}
 % job title/career
-\cvjobtitle{ATER}
+\cvjobtitle{Post doctorant}
 % date of birth
 \cvbirthday{22 Juin 1992}
 % phone number
