--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -136,7 +136,7 @@
 
 \cvsection{Expériences de recherche}
 \begin{cvtable}
-  \cvitem{2021-2023}{Post Doctorant}{Observatoire de Paris - GEPI}{Tomographie cinétique du milieu
+  \cvitem{2021-2023}{Post Doctorant}{Observatoire de Paris - GEPI}{Tomographie cinématique du milieu
   interstellaire}
   \cvitem{2019-2020}{ATER}{Observatoire de Paris - GEPI- UFE}{Étude de la structure de la Voie
     lactée
