--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -165,7 +165,7 @@
 \begin{cvtable}
   \cvitem{2021}
   {FEDReD III: Unraveling the 3D structure \\of Vela and Puppis}
-  {Soumis}
+  {Soumit A\&A}
   {Hottier \textit{et.al.}}
 
   \cvitem{2020}
