--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -218,7 +218,7 @@
 
   \cvitem{2016-2020}{Tutorat à distance}{DU Obs. Paris}{12 étudiants}
 
-  \cvitem{2016-2020}{Observations astronomiques}{DU/FP Obs. Paris}{Stage à l'Observatoire de Haute
+  \cvitem{2016-2021}{Observations astronomiques}{DU/FP/M2 Obs. Paris}{Stage à l'Observatoire de Haute
   Provence T152 - Soirée lunette Arago}
 \end{cvtable}
 
