--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -141,9 +141,6 @@
   \cvitem{2019-2020}{ATER}{Observatoire de Paris - GEPI- UFE}{Étude de la structure de la Voie
     lactée
   avec les données Gaia, 2MASS, UKIDSS, VVV}
-  \cvitem{2016-2019}{Doctorat}{Observatoire de Paris - Gepi}{Étude de la structure de la Voie
-    lactée
-  avec les données Gaia, 2MASS}
   % \cvitem{Mars - Juillet 2016}{Stage M2}{Institut d'Astrophysique de Paris}
   % {Modélisation non sphérique des amas de galaxies par méthode de Metropolis Hastings}
   % \cvitem{Avril - Juillet 2015}{Stage M1}{Observatoire de Paris - LERMA}
@@ -154,7 +151,8 @@
 
 \cvsection{Formations}
 \begin{cvtable}
-  \cvitem{2016-2019}{\textbf{Doctorat}}{Observatoire de Paris - GEPI}{}
+  \cvitem{2016-2019}{Doctorat}{Observatoire de Paris - Gepi}{Distribution 3D d'étoiles et de
+  poussière dans le disque de la Voie lactée}
   \cvitem{2014-2016}{Master}{Observatoire de Paris}{Dynamique des systèmes gravitationnels}
   % \cvitem{2014-2015}{Master 1}{Observatoire de Paris}{Sciences de L'univers et technologies spatiales}
   % \cvitem{2011-2014}{Licence}{Université Lille 1}{Physique fondamentale}
@@ -211,6 +209,9 @@
 \cvsection{Enseignement}
 \subsection{Université}
 \begin{cvtable}
+  \cvitem{2020-2021}{Stage d'observation M2}{Obs. Paris}{Stage à l'Observatoire de Haute
+  Provence T152}
+
   \cvitem{2016-2019}{Travaux dirigés}{M1 Obs. Paris}{Mécanique Quantique -
   Programmation Fortran}
   
@@ -218,7 +219,7 @@
 
   \cvitem{2016-2020}{Tutorat à distance}{DU Obs. Paris}{12 étudiants}
 
-  \cvitem{2016-2021}{Observations astronomiques}{DU/FP/M2 Obs. Paris}{Stage à l'Observatoire de Haute
+  \cvitem{2016-2020}{Observations astronomiques}{DU/FP/ Obs. Paris}{Stage à l'Observatoire de Haute
   Provence T152 - Soirée lunette Arago}
 \end{cvtable}
 
@@ -230,9 +231,8 @@ catalogue d'étoiles}
   \cvitem{2019}{Conférence étoiles en
   scène}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{Com Obs. Paris}}{Conférence express au Grand Rex}
   \cvitem{2018}
-  {Conférence Pint of science}
-  {\href{https://pintofscience.fr/}{Pint of science France}}{La mission spatiale Gaia ; avec Olivier La
-  Marle}
+  {\textbf{La mission spatiale Gaia}}
+  {\href{https://pintofscience.fr/}{Pint of science France}}{}
 \end{cvtable}
 
 \cvsection{Responsabilités Administratives}
