update and typo

--- a/CV_Clement_Hottier.tex
+++ b/CV_Clement_Hottier.tex
@@ -162,8 +162,8 @@
 \subsection{Publications}
 \begin{cvtable}
   \cvitem{2021}
-  {FEDReD III: Unraveling the 3D structure \\of Vela and Puppis}
-  {Soumit A\&A}
+  {FEDReD III: Unraveling the 3D structure of Vela}
+  {Soumis A\&A}
   {Hottier \textit{et.al.}}
 
   \cvitem{2020}
@@ -242,7 +242,7 @@ catalogue d'étoiles}
 l'Observatoire de Paris}
 
   \cvitemshort{2017-2019}{Représentant des étudiants de l'Observatoire de
-  Paris au Conseil d'administration (CA), au conseil de l'Unité Formation-Enseignement (CUFE)
+  Paris au conseil d'administration (CA), au conseil de l'unité formation-enseignement (CUFE)
 et au conseil de la documentation (CDOC)}
 \end{cvtable}
 
