--- a/CV_Clement_Hottier_prive.tex
+++ b/CV_Clement_Hottier_prive.tex
@@ -139,20 +139,22 @@
 
 \cvsection{Expériences Professionnelles}
 \begin{cvtable}
+  \cvitem{2021-}{Post-Doctorant}{Observatoire de Paris}{- Conception d'algorithme de
+  tomographie 3D}
   \cvitem{2019-2020}{Enseignant Chercheur (ATER)}{Observatoire de Paris}{- Exploration
     de données et identification croisée de structures\\
     - Big Data\\
-    - Distribution de base de données\\
+    - Mise a disposition de base de données\\
     - Administration de données non réduite (HDF5)\\
-    - Implémentation d'algorithme de classification et création de catalogues
+    - Implémentation d'algorithme de classification et création de catalogues (Python)
     }
     \cvitem{2016-2019}{Doctorant (Avec mission d'enseignement)}{Observatoire de Paris}{
-    - Conception et mise au point algorithme d'analyse par déconvolution Bayésienne\\
+      - Conception, optimisation, et validation d'un algorithme d'analyse par déconvolution Bayésienne (Java)\\
     - Implémentation et Intégration continue d'un logiciel d'analyse de données (Git et
     GitLab CI)\\
-    - Gestion d'un logiciel d'analyse en mode production dans un centre de calcul ($\approx
-  200\.000$hCPU) et des sorties brut ($10$TB)\\
-   - Développement du Pipeline de post processing et de visualisation 
+    - Gestion d'un logiciel d'analyse (Java) en mode production dans un centre de calcul ($\approx
+  200\.000$hCPU) et des résultats brut ($10$TB)\\
+  - Développement du Pipeline de post processing et de visualisation (Python)
     
 }
 
@@ -173,16 +175,21 @@
   \cvitem{2016-2020}{Stage d'observation}{Observatoire de Paris/Univ Paris-Saclay}
   {- Encadrement d'observations sur instruments professionnels\\
    - Développement de la boîte à outils de réduction des données et distribution en package
- python et conteneur Docker}
+ python et image Docker}
 \end{cvtable}
 
 \subsection{Médiation scientifique}
 \begin{cvtable}
+  \cvitem{2020}{\textbf{Conférence de Presse Gaia EDR3}}{\href{https://youtu.be/kOLjv-9lsmA?t=2145}
+    {\underline{Com Obs.Paris}}}{}
+  \cvitem{2020}{Fête de la science à
+  l'Observatoire}{\href{https://youtu.be/r70a8Ztte4w}{\underline{Youtube Live}}}{Gaia : Le plus vaste
+catalogue d'étoiles}
+  \cvitem{2019}{Conférence étoiles en
+  scène}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{\underline{Com Obs. Paris}}}{Conférence express au Grand Rex}
   \cvitem{2018}
   {Conférence Pint of science}
   {\href{https://pintofscience.fr/}{\underline{Pint of science France}}}{La mission spatiale Gaia}
-  \cvitem{2019}{Conférence étoiles en
-  scène}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{\underline{Com Obs. Paris}}}{Conférence express au Grand Rex}
 \end{cvtable}
 
 
@@ -191,13 +198,12 @@
 \begin{cvtable}
   \cvitem{2020}
   {FEDReD II : 3D Extinction Map with 2MASS and Gaia DR2 data}
-  {\href{https://ui.adsabs.harvard.edu/abs/2020arXiv200703734H/abstract}{\underline{sous
-  presse}}}
+  {\href{https://ui.adsabs.harvard.edu/abs/2020arXiv200703734H/abstract}{\underline{A\&A}}}
   {}
 
   \cvitem{2020}
   {FEDReD I: 3D dust and stellar maps by \\Bayesian deconvolution}
-  {\href{https://ui.adsabs.harvard.edu/abs/2020arXiv200704455B/abstract}{\underline{sous presse}}}
+  {\href{https://ui.adsabs.harvard.edu/abs/2020arXiv200704455B/abstract}{\underline{A\&A}}}
   {}
 \end{cvtable}
 
@@ -215,7 +221,7 @@
 \end{cvtable}
 
 
-\cvsection{Responsabilités Administratives}
+\cvsection{Responsabilités Administratives et Structurantes}
 \begin{cvtable}
   \cvitemshort{2017-2019}{Représentant des étudiants de l'Observatoire de
   Paris au conseil d'administration (CA), au conseil de l'Unité Formation-Enseignement (CUFE)
