--- a/CV_Clement_Hottier_prive.tex
+++ b/CV_Clement_Hottier_prive.tex
@@ -78,7 +78,7 @@
 % your name
 \cvname{Clément Hottier}
 % job title/career
-\cvjobtitle{Data Scientist}
+\cvjobtitle{Post Doctorant}
 % date of birth
 \cvbirthday{22 Juin 1992}
 % phone number
@@ -143,8 +143,8 @@
   tomographie 3D}
   \cvitem{2019-2020}{Enseignant Chercheur (ATER)}{Observatoire de Paris}{- Exploration
     de données et identification croisée de structures\\
-    - Big Data\\
-    - Mise a disposition de base de données\\
+    - Big Data (Python, Java, SQL)\\
+    - Mise a disposition de base de données (SQL, ADQL, Fits)\\
     - Administration de données non réduite (HDF5)\\
     - Implémentation d'algorithme de classification et création de catalogues (Python)
     }
